first minimum demo

--- a/css/main.css
+++ b/css/main.css
@@ -5,22 +5,33 @@
     font-style: normal;
 }
 
-#app {
-    width: 900px;
-    height: 640px;
+body {
+    background-color: black;
 }
+
+* {
+    margin: 0;
+    padding: 0;
+}
+/* #app {
+    width: 640px;
+    height: 480px;
+    left: auto;
+    right: auto;
+    margin: auto;
+} */
 
 #next {
     /* position: absolute;
     translate: 100px; */
 }
-* {
-    margin: 0;
-    padding: 0;
-}
-.container {
+/* .container {
     position: relative;
     top: 80vh;
-}
+} */
 
+#my_canvas {
+    width: 640px;
+    height: 480px;
+}
 
